tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__FluidRegulator-AAAAAAAAAAAAAAAAAAAHZQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1893,
  "optional_prerequisites": [
    1200,
    1894,
    783
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Turbines require precise amounts of fluids or else they will [warn]explode[/warn]. Use the fluid regulator on the pipe attached to the input bus to control the rate of fluids into the turbine. To raise the fluid limit, look at the right side of the regulator and:\n\n1L - Right-click with an empty hand\n16L - Right-click with a screwdriver\n256L - Right-click with a screwdriver while sneaking\n\nTo lower the fluid limit, do the same while looking at the left side.\n\nUse the Large Turbine Calculator and the Turbine stats sheet on the spreadsheet to find what to set it to (after deciding on a fuel). At GTNH, we do the math for you! For this at least.\n\n[note]If you shift-right-click on it you can use the interface which is more precise.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lFluid Regulator",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
