tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__GeothermalPowerE-AAAAAAAAAAAAAAAAAAAK7g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2798,
  "prerequisites": [
    1707
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Turns lava into power, at very inefficient rates. Also, seems to produce way more pollution than it says. They also require you to be 2 tiers above the output amount, so, yeah.\n\n[note]Wasn't geothermal supposed to be environmentally friendly?[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Geothermal Power EV",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1707
  ],
  "rewards": [],
  "tasks": []
}
