tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__HarnessingChaos-_O6stWM3RR-qJdcvs0i-Mw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 7149258935928143411,
  "prerequisites": [
    10633642008695513684
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You've mastered antimatter production, but raw antimatter alone won't run your machines. To turn that potential into unparalleled power, it's time to [warn]harness the chaos[/warn] itself!\n\n[quest]Introducing the Shielded Lagrangian Annihilation Matrix![/quest]\n\nThe SLAM creates raw energy by reacting the Semi-Stable Antimatter with normal matter in a controlled environment.\n\nEvery cycle, the generator will react all antimatter and matter in hatches instantly, converting it all into energy directly. The EU output is based on the equal amounts of antimatter and matter annihilated. Therefore, imbalance between the amounts will waste your precious energy.\n\nDepending on the matter used to annihilate, the antimatter amount gets an exponent applied to it, directly increasing the amount of energy produced from 1L of antimatter - this means the more you annihilate in one go, the more efficient it is!\n\nThe maximum EU for a cycle is limited by the capacity of all laser source hatches on the structure (limited to 64), even on wireless mode.\n\n[note]It can't output more than 9.22e18 EU in a cycle, or just below 43 16M UXV Laser Sources (If you're crazy enough for it)\n[/note]\n\nThe Formula and the exponents for each of the possible matters are:\n\nGenerated EU = (§3Antimatter§r^§6exponent§r) * 1,000,000,000,000\n\nMolten Copper - §61.00§r\nMolten Superconductor Base UIV - §61.02§r\nMolten Superconductor Base UMV - §61.03§r",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Harnessing Chaos",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    10633642008695513684
  ],
  "rewards": [],
  "tasks": []
}
