tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__Illteachyouhowto-Hn_igsosSbKsnATeYgvPgw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 14568099925134659459,
  "prerequisites": [
    1416
  ],
  "properties": {
    "auto_claim": false,
    "desc": "TL;DR: The casing amount in this quest is for the best Solar Tower, which generates around 2 LuV amps and is a major Stainless Steel, Titanium and HV circuit sink, amongst other things.\n\nHave you ever laid eyes upon a solar panel? You might have built a few of them here. What do they all have in common, I ask you... they generate either Steam or EU directly from sunlight, and that is not efficient. There's something that everybody forgot!\n\nSingleblock solar panels are best to insert anywhere that has sun, and provide constant power to a machine. However, EU storage and transport are easy here, so why not build something better? Instead of generating energy directly, send those warm beams of sunlight into a central structure with circles of Solar Reflectors, and bask in the eternal power of the biggest fusion reactor in the Solar System!\n\n(If you end up making a bigger one, don't come arguing to me about this. Be quiet.)\n\nThe whole idea is that the energy of the Sun's rays is directed towards a fluid that can retain the energy, a Solar Salt that does it far better than water. The Solar Tower transfers heat to all the fluid inside it, but watch out! If there's too much cold Solar Salt inside, it will drain away all the heat and slow down the entire process.\n\nIn more detail, the Solar Tower has a heat value that ranges from 0 to 100000, and it only heats up Solar Salt at 30000 or above. The amount of heat gained per cycle depends on the number of Reflectors, but also the current heat value: this process is optimal at exactly half the maximum, so 50000 heat. To get a perfect tower setup, you have to slowly feed cold Solar Salt to maintain this heat value, taking away just enough heat to keep it there. I'll let you figure out what the flow rate is, given that it depends on how many Reflectors you have.\n\nFrom there, generate Steam or SH Steam by heat-exchanging in the same way as Hot Coolant does it. If you want this setup to truly be optimal, do place it in your personal dimension for permanent daylight.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "I'll teach you... how to Praise the Sun!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1416
  ],
  "rewards": [],
  "tasks": []
}
